--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,7 +1,87 @@
 footer{
     width: 100%;
-    height: 175px;
+    min-height: 235px;
+    padding-bottom: 10px; 
     position: absolute;
     bottom: 0;
     background: rgba(128, 160, 109, 0.9);
 }
+
+footer .container{
+	height: 100%;
+}
+
+footer .footer-content h3{
+	color: rgba(249, 234, 136, 0.9);
+}
+
+footer .footer-content{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+
+footer .footer-content a, footer .footer-content p  {
+	color:rgba(230,230,230,0.9);
+	text-decoration: none;
+	transition: all 0.2s ease-in;
+}
+
+footer .footer-content a:hover{
+	opacity: 0.75;
+}
+
+footer .footer-content p {
+	margin-bottom: 5px;
+	margin-top: 5px;
+}
+
+footer .footer-content ul{
+	list-style: none;
+	padding: 0;
+}
+
+footer .footer-content ul li{
+	margin-bottom: 10px;
+	font-size: 15px;
+}
+
+footer .footer-content .social-media{
+	margin-bottom: 10px;
+}
+
+footer .footer-content .social-media a{
+	margin-right: 10px;
+}
+
+footer .footer-content .contact-info{
+	display: flex;
+	flex-direction: column;
+}
+
+footer .footer-content .contact-info a{
+	margin-bottom: 12px;
+}
+
+footer .footer-content .contact-info img{
+	width: 23px;
+	vertical-align: sub;
+	margin-right: 5px;
+}
+
+footer small{
+    display: block;
+    text-align: center;
+    color: rgba(230,230,230, 0.7);
+    margin: 30px 10px 0;
+}
+
+@media screen and (max-width: 450px) {
+	footer .footer-content .footer-section:nth-of-type(2) {
+		order: 3;
+	}
+}
+
+
+
