--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -2,9 +2,8 @@ footer{
     width: 100%;
     min-height: 235px;
     padding-bottom: 10px; 
-    position: absolute;
-    bottom: 0;
-    background: rgba(128, 160, 109, 0.9);
+    background: linear-gradient(to bottom, rgba(128, 160, 109, 0.9), rgba(128, 160, 109, 1));
+    margin-top: 25px;
 }
 
 footer .container{
