--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -15,6 +15,7 @@ nav{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	flex-wrap: wrap;
 	height: auto;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 	margin-bottom: 25px;
@@ -67,6 +68,30 @@ nav .nav-section span img {
 	width: 20px;
     vertical-align: sub;
     margin-right: 5px;
+}
+
+
+@media screen and (max-width:992px) {
+	nav .nav-section:last-child {
+		display: none;
+	}
+	nav .nav-section:first-child {
+		order: 2;
+		justify-content: flex-end;
+	}
+	nav .nav-section{
+	  justify-content: flex-start;
+	}
+}
+
+@media screen and (max-width:550px) {
+	nav{
+		padding: 15px 10vw 0;
+
+	}
+	nav .nav-section, nav .nav-section:first-child{
+	  justify-content: center;
+	}
 }
 
 
