--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,7 @@ body {
 	margin: 0 auto;
 }
 
-main.container{
+main{
 	min-height: 60vh;
 }
 
@@ -19,11 +19,14 @@ h1,h2,h3,h4{
 }
 
 p, a{
+	font-family: 'Open Sans', sans-serif;
 	font-weight: lighter;
 	text-decoration: none;
+	color: #4c4c4c;
 }
 
 p{
 	line-height: 22px;
+	margin: 0 0 15px;
 }
 
