--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -16,3 +16,14 @@
 	width: 100%;
 	max-width:309px;
 }
+
+@media screen and (max-width: 767px) {
+	.row{
+		flex-direction: column;
+	}
+
+	.row .column{
+		width: 100%!important;
+		margin-bottom: 10px;
+	}
+}
