--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -4,6 +4,7 @@ footer{
     padding-bottom: 10px; 
     background: linear-gradient(to bottom, rgba(128, 160, 109, 0.9), rgba(128, 160, 109, 1));
     margin-top: 25px;
+    box-shadow:rgba(50, 50, 93, 0.11) 0px -2px 6px 0px, rgba(0, 0, 0, 0.08) 0px -1px 6px;
 }
 
 footer .container{
